animation mobile fix

--- a/assets/animation.css
+++ b/assets/animation.css
@@ -229,7 +229,7 @@
         transform: translateX(0);
    }
     100% {
-        transform: translateX(120px);
+        transform: translateX(150px);
    }
 }
 
